--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
       {
         "newlinesBetween": "always",
         "groups": [
-          "/^react/",
+          "/^next/",
           "/^@/",
           "/^redux/",
           "module",
