--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "next": "10.0.7",
     "next-images": "^1.7.0",
+    "prismic-dom": "^2.2.5",
+    "prismic-javascript": "^3.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.2",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
