--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "eslint src --max-warnings=0"
   },
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.19.26",
     "next": "10.0.7",
     "next-images": "^1.7.0",
     "prismic-dom": "^2.2.5",
     "prismic-javascript": "^3.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@types/brainhubeu__react-carousel": "^2.0.2",
     "@types/node": "^14.14.31",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.2",
