--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest",
     "lint": "eslint src --max-warnings=0"
   },
   "dependencies": {
@@ -17,9 +18,12 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@types/brainhubeu__react-carousel": "^2.0.2",
     "@types/node": "^14.14.31",
     "@types/prismic-dom": "^2.1.1",
@@ -39,6 +43,8 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.3",
     "prettier": "^2.2.1",
     "typescript": "^4.2.2"
   }
