--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,15 +2,13 @@
   "env": {
     "browser": true,
     "node": true,
+    "jest": true,
     "es2021": true
   },
   "extends": [
     "plugin:react/recommended",
     "standard",
-    "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint",
-    "prettier/standard",
-    "prettier/react"
+    "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -28,11 +26,13 @@
     "import-helpers"
   ],
   "rules": {
-    "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "error",
-    "space-before-function-paren": "off",
+    "react-hooks/exhaustive-deps": "warn",
     "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "prettier/prettier": "error",
+    "space-before-function-paren": "off",
     "import-helpers/order-imports": [
       "warn",
       {
@@ -40,7 +40,6 @@
         "groups": [
           "/^next/",
           "/^@/",
-          "/^redux/",
           "module",
           "/^#/",
           "/^\\.\\./",
