--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@types/brainhubeu__react-carousel": "^2.0.2",
+    "@types/jest": "^26.0.21",
     "@types/node": "^14.14.31",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.2",
