--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,8 @@
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "prettier/prettier": "error",
     "space-before-function-paren": "off",
     "import-helpers/order-imports": [
