--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest",
+    "test": "jest --maxWorkers=50%",
     "lint": "eslint src --max-warnings=0"
   },
   "dependencies": {
-    "@brainhubeu/react-carousel": "^1.19.26",
     "next": "10.0.7",
     "next-images": "^1.7.0",
+    "nodemailer": "^6.5.0",
     "prismic-dom": "^2.2.5",
     "prismic-javascript": "^3.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
+    "react-slick": "^0.28.1",
     "styled-components": "^5.2.1",
     "styled-media-query": "^2.1.2"
   },
@@ -25,14 +26,16 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^13.0.16",
-    "@types/brainhubeu__react-carousel": "^2.0.2",
     "@types/jest": "^26.0.21",
     "@types/node": "^14.14.31",
+    "@types/nodemailer": "^6.4.1",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.2",
+    "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "@vercel/node": "^1.9.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "7.12.1",
