--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "10.0.7",
     "next-images": "^1.7.0",
     "nodemailer": "^6.5.0",
+    "polished": "^4.1.2",
     "prismic-dom": "^2.2.5",
     "prismic-javascript": "^3.0.2",
     "react": "17.0.1",
