--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
     "react-slick": "^0.28.1",
+    "react-toastify": "^7.0.4",
     "styled-components": "^5.2.1",
     "styled-media-query": "^2.1.2"
   },
